@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3335 2019/08/09 16:22:30 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3336 2019/08/09 16:23:46 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5458,3 +5458,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added graphics/mygui version 3.2.3.20190707 [nia 2019-08-09]
 	Added devel/R-purrr version 0.3.2 [brook 2019-08-09]
 	Added devel/R-tidyselect version 0.2.5 [brook 2019-08-09]
+	Added math/R-dplyr version 0.8.3 [brook 2019-08-09]
